--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
   </div>
 
   <script>
-    // Paste your full item_prices and item_colors below
-    const itemPrices = PLACEHOLDER_ITEM_PRICES;
-    const itemColors = PLACEHOLDER_ITEM_COLORS;
 
+    <script src="itemPrices.js"></script>
+    <script src="itemColors.js"></script>
+    
     const itemsContainer = document.getElementById('itemsContainer');
     const totalDisplay = document.getElementById('totalDisplay');
     const entries = {};
