--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SCYield2Sell Calculator</title>
+  <title>Star Citizen Yield2Sell Calculator</title>
+  <link rel="icon" href="logo.ico" type="image/x-icon" />
   <style>
     body {
       background-color: #000;
