--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 </head>
 <body>
 
-  <div class="title">SCYield2Sell Calculator</div>
+  <div class="title">Star Citizen Yield2Sell Calculator</div>
 
   <div class="total-top" id="totalDisplayTop">Total: 0.00 aUEC</div>
 
