--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       border: none;
       padding: 5px;
       margin-top: 2px;
+      font-size: 12px;
     }
 
     .item-container {
@@ -70,7 +71,6 @@
       flex-wrap: wrap;
       gap: 6px;
       align-items: center;
-      margin-top: 5px;
     }
 
     .row input, .row select {
@@ -79,6 +79,7 @@
       background: #1a1a1a;
       color: #00FF00;
       border: none;
+      font-size: 12px;
     }
 
     .row button {
@@ -127,6 +128,31 @@
       background: lime;
     }
 
+    .ready-container {
+      margin-top: 20px;
+      padding: 10px;
+      background-color: #111;
+      border-radius: 6px;
+    }
+
+    .ready-container label {
+      display: block;
+      margin-bottom: 4px;
+      color: #FFD700;
+    }
+
+    .ready-container input {
+      width: 60px;
+      margin-right: 10px;
+    }
+
+    .ready-time {
+      margin-top: 6px;
+      font-family: monospace;
+      font-size: 13px;
+      color: #00FF00;
+    }
+
     @media (max-width: 600px) {
       .row {
         flex-direction: column;
@@ -147,20 +173,19 @@
     </label>
   </div>
 
-  <!-- ✅ New: Duration and Ready Time Section -->
-  <div class="refinery">
-    <label>Order estimated ready at:</label>
-    <div class="row">
-      <input id="durationHours" type="number" min="0" placeholder="Hours" />
-      <input id="durationMinutes" type="number" min="0" placeholder="Minutes" />
-      <button onclick="calculateReadyTime()">Calculate</button>
-    </div>
-    <div id="readyTimeResult" class="result"></div>
-  </div>
-
   <div id="itemsContainer" class="item-container"></div>
 
   <div class="total" id="totalDisplay">Total: 0.00 aUEC</div>
+
+  <!-- NEW: Order Ready Time Inputs -->
+  <div class="ready-container">
+    <label>Order estimated ready at:</label>
+    <div class="row">
+      <input type="number" id="hoursInput" placeholder="Hours" min="0" />
+      <input type="number" id="minutesInput" placeholder="Minutes" min="0" />
+    </div>
+    <div class="ready-time" id="readyTimeOutput">Ready at: —</div>
+  </div>
 
   <div class="actions">
     <button onclick="exportToFile('txt')">Export to TXT</button>
@@ -176,6 +201,29 @@
     const totalDisplayTop = document.getElementById('totalDisplayTop');
     const entries = {};
 
+    // READY TIME references
+    const hoursInput = document.getElementById("hoursInput");
+    const minutesInput = document.getElementById("minutesInput");
+    const readyTimeOutput = document.getElementById("readyTimeOutput");
+
+    // Estimate Ready Time logic
+    function updateReadyTime() {
+      const hours = parseInt(hoursInput.value) || 0;
+      const minutes = parseInt(minutesInput.value) || 0;
+
+      const now = new Date();
+      now.setHours(now.getHours() + hours);
+      now.setMinutes(now.getMinutes() + minutes);
+
+      const readyTimeStr = now.toLocaleString();
+      readyTimeOutput.textContent = `Ready at: ${readyTimeStr}`;
+      return readyTimeStr;
+    }
+
+    hoursInput.addEventListener("input", updateReadyTime);
+    minutesInput.addEventListener("input", updateReadyTime);
+
+    // BUILD ITEMS
     for (const [item, locations] of Object.entries(itemPrices)) {
       const container = document.createElement('div');
       container.className = 'item';
@@ -254,38 +302,16 @@
 
     function clearAll() {
       document.getElementById('refineryTitle').value = '';
-      document.getElementById('durationHours').value = '';
-      document.getElementById('durationMinutes').value = '';
-      document.getElementById('readyTimeResult').textContent = '';
-
+      hoursInput.value = '';
+      minutesInput.value = '';
+      readyTimeOutput.textContent = 'Ready at: —';
       for (const item in entries) {
         const { input, result } = entries[item];
         input.value = '';
         result.textContent = '';
       }
-
       totalDisplay.textContent = "Total: 0.00 aUEC";
       totalDisplayTop.textContent = "Total: 0.00 aUEC";
-    }
-
-    function calculateReadyTime() {
-      const hours = parseInt(document.getElementById('durationHours').value) || 0;
-      const minutes = parseInt(document.getElementById('durationMinutes').value) || 0;
-
-      if (hours < 0 || minutes < 0) {
-        document.getElementById('readyTimeResult').textContent = "Invalid input.";
-        return;
-      }
-
-      const now = new Date();
-      now.setHours(now.getHours() + hours);
-      now.setMinutes(now.getMinutes() + minutes);
-
-      const timeStr = now.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-      const dateStr = now.toLocaleDateString();
-
-      document.getElementById('readyTimeResult').textContent =
-        `Estimated ready at: ${timeStr} (${dateStr})`;
     }
 
     function exportToFile(type) {
@@ -297,7 +323,9 @@
       let csv = [["Item", "Units", "Price", "Location", "Total Value"]];
       let total = 0;
 
-      content += `Title: ${title}\nDate: ${now.toLocaleString()}\n\n`;
+      const readyTime = updateReadyTime(); // Make sure it's current
+
+      content += `Title: ${title}\nDate: ${now.toLocaleString()}\nEstimated Ready Time: ${readyTime}\n\n`;
 
       for (const item in entries) {
         const { input, select, locations } = entries[item];
@@ -317,6 +345,7 @@
       content += `\nTotal: ${total.toLocaleString()} aUEC`;
       csv.push([]);
       csv.push(["Total", "", "", "", total]);
+      csv.push(["Estimated Ready Time", "", "", "", readyTime]);
 
       const blob = new Blob([
         type === "csv"
